--- a/numpyDemo.ipynb
+++ b/numpyDemo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "16"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "48"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "(2, 7)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "13"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "array([1, 2, 3, 4, 5, 6, 7])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "array([ 3, 10])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "array([2, 4, 6])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "4"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "        [8, 8]]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -482,29 +482,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.27388442 0.72155014 0.77703403]\n",
-      "  [0.83100628 0.52279152 0.08463212]]\n",
+      "[[[0.42856375 0.31892484 0.98838509]\n",
+      "  [0.70155513 0.40547365 0.89682181]]\n",
       "\n",
-      " [[0.72842988 0.54921537 0.62222324]\n",
-      "  [0.63981508 0.03000919 0.39556903]]\n",
+      " [[0.97375051 0.00682114 0.54731438]\n",
+      "  [0.4099619  0.26350103 0.39602353]]\n",
       "\n",
-      " [[0.74545388 0.77537723 0.95658895]\n",
-      "  [0.06254992 0.40850766 0.96128596]]\n",
+      " [[0.94166462 0.25824444 0.53913884]\n",
+      "  [0.3035908  0.88139307 0.2428717 ]]\n",
       "\n",
-      " [[0.64528414 0.45969057 0.13282374]\n",
-      "  [0.15869998 0.00447471 0.0376523 ]]]\n",
+      " [[0.26771275 0.40892423 0.17603258]\n",
+      "  [0.52048315 0.1337023  0.49890234]]]\n",
       "-----------------------------------------------------------------\n",
-      "[[0.27538926 0.96677352 0.85673937 0.44913674 0.24570474 0.18316144\n",
-      "  0.44768493]\n",
-      " [0.81290634 0.71563521 0.45109524 0.65160913 0.33388964 0.87681901\n",
-      "  0.85525887]]\n"
+      "[[0.43989604 0.33791336 0.19457695 0.1271081  0.83997047 0.22062606\n",
+      "  0.08772461]\n",
+      " [0.39775835 0.99624592 0.09340686 0.20121729 0.99950711 0.12742354\n",
+      "  0.40137028]]\n"
      ]
     }
    ],
@@ -519,20 +519,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 6 0]\n",
-      " [2 0 0]\n",
-      " [0 1 6]]\n",
+      "[[5 3 6]\n",
+      " [6 4 5]\n",
+      " [2 1 1]]\n",
       "-----------------------------------------------------------------\n",
-      "[[4 4 6]\n",
-      " [6 6 4]\n",
-      " [4 6 5]]\n"
+      "[[6 4 5]\n",
+      " [5 6 4]\n",
+      " [6 4 5]]\n"
      ]
     }
    ],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -660,18 +660,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([100,   2,   3])"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = [100   2   3]\n"
+     ]
     }
    ],
    "source": [
@@ -696,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -740,15 +737,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Linear Algebra operations on np arrays"
+    "#### Linear Algebra operations on np arrays\n",
+    "\n",
+    "- Remember to multiply matrices, the column of the first matrix must be equal to rows of the second matrix\n",
+    "- use np.matmul() method to multiply matrices\n",
+    "![Matrix Multiplication](matrixMultiplication.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "[[2 2]\n",
+      " [2 2]\n",
+      " [2 2]]\n",
+      " a * b: [[6. 6.]\n",
+      " [6. 6.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.ones((2,3))\n",
+    "print(a)\n",
+    "b = np.full((3,2),2, dtype='int32')\n",
+    "print(b)\n",
+    "\n",
+    "#multiplying a and b should result in a 2x2 matrix\n",
+    "\n",
+    "print(f' a * b: {np.matmul(a, b)}')\n"
+   ]
   }
  ],
  "metadata": {
