--- a/numpyDemo.ipynb
+++ b/numpyDemo.ipynb
@@ -939,11 +939,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,  13,  21,  11, 196,  75,   4,   3,  34,   6,   7,   8,   0,\n",
+       "          1,   2,   3,   4,   5],\n",
+       "       [  3,  42,  12,  33, 766,  75,   4,  55,   6,   4,   3,   4,   5,\n",
+       "          6,   7,   0,  11,  12],\n",
+       "       [  1,  22,  33,  11, 999,  11,   2,   1,  78,   0,   1,   2,   9,\n",
+       "          8,   7,   1,  76,  88]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#load data from a file without using pandas\n"
+    "#load data from a file without using pandas\n",
+    "fileData = np.genfromtxt('data.txt', delimiter=',')\n",
+    "fileData\n",
+    "\n",
+    "print(sep)\n",
+    "#cast data into another type\n",
+    "castData = fileData.astype('int32')\n",
+    "castData"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### boolean masking and advanced indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False,  True,  True, False, False, False,\n",
+       "        False, False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False,  True,  True, False,  True, False,\n",
+       "        False, False, False, False, False, False, False, False, False],\n",
+       "       [False, False, False, False,  True, False, False, False,  True,\n",
+       "        False, False, False, False, False, False, False,  True,  True]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#where in file data is the value greater than 50\n",
+    "fileData>50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([196,  75, 766,  75,  55, 999,  78,  76,  88])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#indexing where the values match condition would return the matching values\n",
+    "castData [castData >50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Items at the following indices [1,2,8] in a are: [2 4 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#indexing with a list in numpy\n",
+    "a = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "print(f'Items at the following indices [1,2,8] in a are: {a[[1,3,8]]}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False,  True, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#find out if any values in any columns are greater than 50\n",
+    "np.any(castData >50, axis=0) # axis = 1 would be the rows\n",
+    "np.all(castData > 50, axis=0) # if True if all the values in that column are greater than 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True, False,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True, False,  True, False,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True, False,\n",
+       "         True,  True,  True,  True,  True,  True,  True, False, False]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#values greater than 50 but less  than 100\n",
+    "\n",
+    "((castData >50) & (castData <100))\n",
+    "#reverse of the above\n",
+    "(~((castData >50) & (castData <100)))"
    ]
   }
  ],
